Update deprecated tmux command

--- a/boringfiles/d__tmux.conf
+++ b/boringfiles/d__tmux.conf
@@ -23,7 +23,8 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+# https://github.com/tmux/tmux/issues/1689#issuecomment-486722349
+set-window-option -g window-status-current-style bg=red
 
 # Vi copypaste mode
 # UPDATES:
