Replace wicd by network-manager

--- a/boringfiles/d__i3/config
+++ b/boringfiles/d__i3/config
@@ -163,7 +163,7 @@ bindsym $mod+r mode "resize"
 
 ## Startup applications ##
 # applets
-exec --no-startup-id wicd-gtk &
+exec --no-startup-id nm-applet &
 exec --no-startup-id xfce4-power-manager &
 ##exec --no-startup-id syndaemon -i 1.0 -K -R -t &
 # dropbox
