--- a/boringfiles/d__i3/config
+++ b/boringfiles/d__i3/config
@@ -173,7 +173,7 @@ exec dropbox stop
 exec --no-startup-id setxkbmap us -variant intl ; xmodmap ~/.xmodmaprc
 #exec --no-startup-id i3-msg 'workspace 7; exec pidgin;'
 # Automatic color adjustment
-exec --no-startup-id redshift -l -27.578446:-48.506651 -t 6500:4000 -b 1.0:0.5 &
+exec --no-startup-id redshift -l -27.578446:-48.506651 -t 6500:3700 -b 1.0:0.5 -m vidmode &
 
 
 # pulse audio volume control
