--- a/boringfiles/d__config/atuin/config.toml
+++ b/boringfiles/d__config/atuin/config.toml
@@ -23,4 +23,6 @@
 ## address of the sync server
 # sync_address = "https://api.atuin.sh"
 
+## which search mode to use
+## possible values: prefix, fulltext, fuzzy
 search_mode = "fuzzy"
