--- a/boringfiles/d__tmux.conf
+++ b/boringfiles/d__tmux.conf
@@ -31,10 +31,9 @@ set-window-option -g window-status-current-style bg=red
 # https://wiki.archlinux.org/index.php/tmux (Vim friendly configuration)
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
-
-# copy to clipboard
-# bind-key p save-buffer ~/.tmux-buffer \; run-shell "xsel -i -b <~/.tmux-buffer && rm ~/.tmux-buffer"
+# Make Tmux copy text using the system clipboard.
+# https://unix.stackexchange.com/a/131187/398743
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Start numbering at 1
 set-window-option -g pane-base-index 1
